--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=1500">
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Trello</title>
   <style>
+    *{
+      box-sizing: border-box;
+    }
+
     body {
       padding:0%;
       margin: 0%;
